tests/wpt/tests/third_party/test262/test/language/statements/with/strict-script.js
// Copyright (c) 2012 Ecma International.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
es5id: 12.10.1-11-s
description: >
  Strict Mode - SyntaxError is thrown when using WithStatement in strict mode
  code
negative:
  phase: parse
  type: SyntaxError
flags: [onlyStrict]
---*/

$DONOTEVALUATE();

with ({}) {}
